import missing module

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PORT = 3000
 DB_HOST = localhost
 DB_USERNAME = root
 DB_PASSWORD = root
-DB_DATABASE = blogCrud
+DB_DATABASE = blogging_platform
 DB_DIALECT = mysql
